<resources>
    <string name="app_name">GithubOAuthReposView</string>

    <!-- Ошибки -->
    <string name="error_wrong_view">\nОШИБКА:\nНеверное состояние вью:</string>
    <string name="github_no_internet">\nОШИБКА:\nСеть Интернет стала недоступна.\nДля первичной авторизации нужен выход в Интернет</string>
    <string name="error_not_repos_List">\nОШИБКА:\nСписок репозиториев получить не удалось</string>
    <string name="error_not_user_data">\nОШИБКА:\nДанные по текущему пользователю получить не удалось</string>
    <string name="no_oauth_server_error_message_text">\nОШИБКА:\nПервичный вход в приложение (или если вы вышли из своей учётной сессии) возможен только после OAuth авторизации.\nОна осуществляется через сервер разработчика.\nК сожалению, сервер сейчас выключен.\nЧтобы включить сервер, свяжитесь с разработчиком Хахалиным Андреем Владимировичем:\nтелеграмм: @avkhakhalin\ne-mail: avkhakhalin@mail.ru\nПосле включения сервера программа сразу продолжит работать.</string>
    <string name="no_internet_error_message_text">\nОШИБКА:\nДля первичного входа в приложение (или если вы вышли из своей учётной сессии) необходим доступ к сети Интернет.\nОна сейчас отключена.\nПожалуйста, включите её и приложение продолжит свою работу.</string>
    <string name="no_github_server_error_message_text">\nОШИБКА:\nДля первичного входа в приложение (или если вы вышли из своей учётной сессии) нужна связь со сервером github.com.\nОн сейчас недоступен.\nКак только он будет доступен, приложение продолжит свою работу.</string>
    <string name="client_error_message_text_first">\nОШИБКА:\nДля бесплатной работы с сервером github.com выделяется лимит\n</string>
    <string name="client_error_message_text_middle">запросов в час.\nВ настоящее время вы его исчерпали или вам не хватает оставшегося количества запросов для получения информации с сервера github.com.\nПопробуйте выполнить запрос через, приблизительно,\n</string>
    <string name="client_error_message_text_last">,\nв</string>
    <string name="client_error_message_text_last_one">\n\nили поработайте без сети,\nс кешем данных.</string>
    <string name="error_token_not_get">\nОШИБКА:\nТокен не получен.</string>

    <!-- Работа -->
    <string name="get_permission_write_read_text">Разрешение на запись и считывание данных получено</string>
    <string name="not_get_permission_write_read_text">Разрешение на запись и считывание данных отсутствует</string>
    <string name="github_yes_internet">Сеть Интернет стала доступна.\nПриложение возобновляет работу</string>
    <string name="github_login_btn_text">Авторизоваться в GitHub</string>
    <string name="github_logout_btn_text">Сменить пользователя в GitHub</string>
    <string name="github_review_text">Просмотреть репозитории\nпользователя в Github</string>
    <string name="github_review_text_start">Просмотреть репозитории\n</string>
    <string name="github_review_text_end">в Github</string>
    <string name="repos_title_tools_text">Перечень репозиториев пользователя</string>
    <string name="repos_fragment_forks_title_text">Список репозиториев\nпользователя</string>
    <string name="commit_date_tools_text">Дата</string>
    <string name="commit_hash_tools_text">Хеш код</string>
    <string name="commit_message_tools_text">Сообщение в коммите</string>
    <string name="repo_title_tools_text">Название</string>
    <string name="repo_description_tools_text">Описание</string>
    <string name="no_repo_description_text">Нет описания</string>
    <string name="repo_author_name_tools_text">Автор</string>
    <string name="repo_forks_number_tools_text">Кол-во форков</string>
    <string name="forks_watches_tools_text">Кол-во просмотров</string>
    <string name="forks_commits_title_text">Коммиты репозитория:</string>
    <string name="loading_text_text">Установка связи с сервером\nдля OAuth авторизации…</string>
    <string name="reload_oauth_button_text">Перезапустить авторизацию OAuth</string>
    <string name="no_commits">Нет коммитов в репозитории</string>
</resources>