<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/repo_user_avatar"
                android:layout_width="@dimen/repo_user_avatar_width"
                android:layout_height="@dimen/repo_user_avatar_height"
                android:layout_margin="@dimen/repo_user_avatar_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/horizontal_border"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_title"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/repo_title_margin"
                android:gravity="start"
                android:textSize="@dimen/repo_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repo_user_avatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/repo_title_tools_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_description"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/repo_description_margin"
                android:gravity="start"
                android:textSize="@dimen/repo_description_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repo_user_avatar"
                app:layout_constraintTop_toBottomOf="@id/repo_title"
                tools:text="@string/repo_description_tools_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_author_name"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/repo_author_name_margin"
                android:gravity="start"
                android:textSize="@dimen/repo_author_name_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repo_user_avatar"
                app:layout_constraintTop_toBottomOf="@id/repo_description"
                tools:text="@string/repo_author_name_tools_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_forks_number"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/repo_forks_number_margin"
                android:gravity="start"
                android:textSize="@dimen/repo_forks_number_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repo_user_avatar"
                app:layout_constraintTop_toBottomOf="@id/repo_author_name"
                tools:text="@string/repo_forks_number_tools_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forks_watches"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/forks_watches_margin"
                android:gravity="start"
                android:textSize="@dimen/forks_watches_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repo_user_avatar"
                app:layout_constraintTop_toBottomOf="@id/repo_forks_number"
                tools:text="@string/forks_watches_tools_text" />

            <View
                android:id="@+id/horizontal_border"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_border_height"
                android:layout_margin="@dimen/horizontal_border_margin"
                android:background="@color/black"
                android:elevation="@dimen/horizontal_border_elevation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forks_watches" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forks_commits_title"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/forks_commits_title_margin"
                android:gravity="start"
                android:text="@string/forks_commits_title_text"
                android:textSize="@dimen/forks_commits_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_border" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forks_commits_recycler"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/forks_commits_recycler_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forks_commits_title"
                tools:listitem="@layout/item_commit" />

            <ProgressBar
                android:id="@+id/loading_view"
                android:layout_width="@dimen/loading_view_width"
                android:layout_height="@dimen/loading_view_height"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/forks_commits_recycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/forks_commits_recycler" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>