<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/users_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/github_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/github_red"
        android:drawablePadding="@dimen/github_login_btn_drawable_padding"
        android:drawableStart="@drawable/ic_github"
        android:padding="@dimen/github_login_btn_padding"
        android:text="@string/github_login_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/github_logout_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/github_logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/github_black"
        android:drawablePadding="@dimen/github_logout_btn_drawable_padding"
        android:drawableStart="@drawable/ic_github"
        android:padding="@dimen/github_logout_btn_padding"
        android:text="@string/github_logout_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_login_btn"
        app:layout_constraintBottom_toTopOf="@id/github_review"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/github_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/github_grey"
        android:drawablePadding="@dimen/github_review_drawable_padding"
        android:drawableStart="@drawable/ic_github"
        android:padding="@dimen/github_review_padding"
        android:text="@string/github_review_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_logout_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading_view"
        android:visibility="gone"
        android:layout_width="@dimen/loading_view_width"
        android:layout_height="@dimen/loading_view_height"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>